--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-
+        maven {
+            url "https://raw.github.com/synergian/wagon-git/releases"
+        }
     }
 }
 
