--- a/toasterlibrary/build.gradle
+++ b/toasterlibrary/build.gradle
@@ -1,13 +1,36 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'maven'
+
 android {
+    ext {
+        minSdkVersion = 21
+        maxSdkVersion = 29
+        versionName = "1.0.2"
+        versionCode = 1
+        groupId = "com.appchance"
+        artifactId = "core"
+        repoOwner = "carloschance"
+        repoName = "Toaster-Library"
+        pomName = "appchance"
+        pomPackaging = ""
+        pomDescription = ""
+        pomUrl = ""
+        pomLicenseName = ""
+        pomLicenseUrl = ""
+        pomLicenseDescription = ""
+        pomDeveloperId = ""
+        pomDeveloperName = ""
+        pomDeveloperEmail = ""
+    }
+
     compileSdkVersion 28
 
 
     defaultConfig {
-        minSdkVersion 23
-        targetSdkVersion 28
+        minSdkVersion minSdkVersion
+        targetSdkVersion maxSdkVersion
         versionCode 2
         versionName "1.1"
 
@@ -22,6 +45,45 @@ android {
         }
     }
 
+    configurations {
+        deployerJar
+    }
+
+
+    uploadArchives {
+        dependsOn build
+        configuration = configurations.archives
+        repositories.mavenDeployer {
+            pom.groupId = groupId
+            pom.artifactId = artifactId
+            pom.version = versionName
+            configuration = configurations.deployerJar
+            repository(url: "git:releases://https://github.com/$repoOwner/$repoName" + ".git")
+            snapshotRepository(url: "git:snapshots://https://github.com/$repoOwner/$repoName" + ".git")
+            pom.project {
+                name pomName
+                packaging pomPackaging
+                description pomDescription
+                url pomUrl
+
+                licenses {
+                    license {
+                        name pomLicenseName
+                        url pomLicenseUrl
+                        distribution pomLicenseDescription
+                    }
+                }
+                developers {
+                    developer {
+                        id pomDeveloperId
+                        name pomDeveloperName
+                        email pomDeveloperEmail
+                    }
+                }
+            }
+        }
+    }
+
 }
 
 dependencies {
@@ -32,4 +94,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+    deployerJar 'ar.com.synergian:wagon-git:0.2.5'
 }
